Finished correcting server chapter

--- a/Slike/dsp-registers.tex
+++ b/Slike/dsp-registers.tex
@@ -1,4 +1,4 @@
-\begin{figure}[]
+\begin{figure}[!h]
 	\centering
 	\includegraphics[scale=0.5]{./Slike/dsp-registers.eps}
 	\caption{Dostopanje do registrov na ISA kartici za digitalno obdelavo signala iz senzorja senzorja JR3.}
