--- a/literatura.bib
+++ b/literatura.bib
@@ -45,6 +45,20 @@
 }
 
 %-------------------------- KNJIGE ---------------------------------------
+@book{isa_system,
+	title={ISA System Architecture},
+	author={Shanley, Tom and Anderson, Don},
+	year={1995},
+	publisher={Addison-Wesley Publishing Company}
+}
+
+@book{miljavec_stroji,
+	title={Elektri?ni stroji: temeljna znanja},
+	author={Miljavec, Damjan and Jereb, Peter},
+	year={2008},
+	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
+	address = {Ljubljana}
+}
 
 @book{mihelj_vodenje,
 	title={Vodenje robotov},
@@ -102,7 +116,12 @@
 }
 
 %-------------------------- CLANKI ---------------------------------------
-
+@article{linux_windows,
+	title={A Real Time Operating Systems (RTOS) Comparison},
+	author={Aroca, Rafael V. and Cauri, Glauco},
+	journal={XXIX Congresso da Sociedade Brasileira de Computação},
+	year={2009},
+}
 
 @article{almassri_pressure_sensor,
 	title={Pressure Sensor: State of the Art, Design, and Application for
