--- a/Tabele/arcnet-command.tex
+++ b/Tabele/arcnet-command.tex
@@ -2,21 +2,21 @@
 \begin{table}[h]
 	\centering
 	\begin{footnotesize}
-		\begin{tabular}{|c c c |}
-		Zaporedna \v{S}tevilka bajta & Opis podatka & Koli\v{c}ina\\ \hline
-		0 & ID po\v{s}iljatelja & $\times 1$ \\
-		1 & ID prejemnika & $\times 1$ \\
-		2 & Prazen / neuporabljen bajt & $\times 1$ \\
-		3 & Mesto sekvencijskega \v{s}tevila & $\times 1$\\
-		4 & Sekvencijsko \v{s}tevilo & $\times 1$\\
-		5 & Tip podatka & $\times 1$  \\
-		6 & Statusni bajt za prvi servo & $\times 1$ \\ 
-		7 & Referen\v{c}ni navor za prvi servo & $\times 2$ \\ 
-		9 & Referen\v{c}na hitrost za prvi servo & $\times 2$ \\ 
-		& \vdots & \\
-		36 & Statusni bajt za sedmi servo & $\times 1$ \\ 
-		37 & Referen\v{c}ni navor za sedmi servo & $\times 2$ \\ 
-		39 & Referen\v{c}na hitrost za sedmi servo & $\times 2$ \\ \hline
+		\begin{tabular}{|l l l |}
+		Zap. \v{s}t. & Dol\v{z}ina & Opis podatka\\ \hline
+		0 & $1$ & ID po\v{s}iljatelja\\
+		1 & $1$ & ID prejemnika\\
+		2 & $1$ & Prazen / neuporabljen bajt\\
+		3 & $1$ & Mesto sekvencijskega \v{s}tevila\\
+		4 & $1$ & Sekvencijsko \v{s}tevilo\\
+		5 & $1$ & Tip podatka\\
+		6 & $1$ & Statusni bajt za prvi servo\\ 
+		7 & $2$ & Referen\v{c}ni navor za prvi servo\\ 
+		9 & $2$ & Referen\v{c}na hitrost za prvi servo\\ 
+		\vdots& \vdots &\vdots \\
+		36 & $1$ & Statusni bajt za sedmi servo\\ 
+		37 & $2$ & Referen\v{c}ni navor za sedmi servo\\ 
+		39 & $2$ & Referen\v{c}na hitrost za sedmi servo\\ \hline
 		\end{tabular}
 	\end{footnotesize}
 	\caption{Opis ARCNET paketa.}
