--- a/Tabele/udp-command.tex
+++ b/Tabele/udp-command.tex
@@ -2,15 +2,16 @@
 \begin{table}[h]
 	\centering
 	\begin{footnotesize}
-		\begin{tabular}{|c c c c|}
-		Zaporedna \v{S}tevilka bajta & Opis podatka & Tip podatka &  Koli\v{c}ina\\ \hline
-		0 & Kontrolni bajt za posamezen motor & char & $\times 7$ \\
-		6 & Referen\v{c}ni navor za posamezen motor & signed short int & $\times 7$ \\
-		20 & Referen\v{c}na hitrost za posamezen motor & signed short int & $\times 7$ \\
-		34 & Rezervirani / neuporabljeni bajti & char & $\times 62$ \\
-		96 & \v{S}tartna sekvenca & char & $\times 1$\\
-		97 & Trenuten \v{c}as na klientu & float & $\times 1$\\ \hline
+		\begin{tabular}{|l l l l|}
+		Zap. \v{s}t. &  Dol\v{z}ina & Opis podatka & Tip podatka\\ \hline
+		0 & $7$ & Kontrolni bajt za posamezen motor & char \\
+		6 & $7$ & Referen\v{c}ni navor za posamezen motor & signed short int \\
+		20 & $7$ & Referen\v{c}na hitrost za posamezen motor & signed short int \\
+		34 &$62$ & Rezervirani / neuporabljeni bajti & char \\
+		96 & $1$ & \v{S}tartna sekvenca & char\\
+		97 & $1$ & Trenuten \v{c}as na klientu & float\\ \hline
 		\end{tabular}
 	\end{footnotesize}
+	\caption{Opis prejetega UDP paketa.}
 	\label{table:udp-command}
 \end{table}
