--- a/BlockDiagrams/inv_dyn_x.tex
+++ b/BlockDiagrams/inv_dyn_x.tex
@@ -51,10 +51,10 @@
 
 \draw [->] (inputddq) node[above = 0.1 cm of inputddq]{$\mathbf{\ddot{x}}_{ref}$} -|  node[pos=0.99, right] {\tiny {$+$}}(sumall);
 
-\draw [->] (sumall) -- (sumdj);
+\draw [->] (sumall) -- node[pos=0.99, above]{\tiny {$+$}}node[pos=0.5, above]{$ \ddot{\mathbf{x}}_u $}(sumdj);
 \draw [->] (sumdj) -- (jinv);
-\draw [->] (jinv) -- node[above = 0, pos=0.5]{$\pmb{\alpha}$}(B);
-\draw [->] (B) -- node[pos=0.99, left]{\tiny {$+$}}(sum2);
+\draw [->] (jinv) -- node[above = 0, pos=0.5]{$\ddot{\mathbf{q}}_u$}(B);
+\draw [->] (B) -- node[pos=0.99, above]{\tiny {$+$}}(sum2);
 \draw [->] (n) -- node[pos=0.99, left]{\tiny {$+$}}(sum2);
 \draw [->] (sum2) -- node[above = 0, pos=0.5]{\textbf{u}}(pa10);
 
