--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -677,7 +677,7 @@ Silo ($\textbf{f}_s$) in navor ($ \textbf{m}_s $), ki ju meri senzor, lahko razd
     \boldsymbol{\tau}_s &=& \boldsymbol{\tau}_{env} + \boldsymbol{\tau}_{grav} + \boldsymbol{\tau}_{off}.
     \end{array}
 \end{equation}
-Kjer je $\textbf{f}_{env}$ zunanja sila, ki deluje na senzor, $\textbf{f}_{grav}$ gravitacijska sila prijemala, èlen $\textbf{f}_{off}$ pa predstavlja merilni odmik, ki je posledica lezenja senzorja. Pri izmerjenem navoru imajo komponente enak pomen. Želja je, doloèiti $\textbf{f}_{grav}$ in $\textbf{f}_{off}$ tako, da ju lahko kompenziramo in doloèimo $\textbf{f}_{env}$. Ko vrh robota ni v kontaktu z okolico velja $\textbf{f}_{env} = 0$ in $\boldsymbol{\tau}_{env} = 0$ oziroma:
+Kjer je $(.)_{env}$ zunanja sila in navor, ki deluje na senzor, $(.)_{grav}$ vpliv mase prijemala, èlen $(.)_{off}$ pa predstavlja merilni odmik, ki je posledica lezenja senzorja. Pri izmerjenem navoru imajo komponente enak pomen. Želja je, doloèiti $(.)_{grav}$ in $(.)_{off}$ tako, da ju lahko kompenziramo in doloèimo $(.)_{env}$. Ko vrh robota ni v kontaktu z okolico velja $\textbf{f}_{env} = 0$ in $\boldsymbol{\tau}_{env} = 0$ oziroma:
 
 \begin{equation}
 \begin{array}{r c l}
@@ -689,7 +689,7 @@ Kjer je $\textbf{f}_{env}$ zunanja sila, ki deluje na senzor, $\textbf{f}_{grav}
 \input{./Slike/jr3_coordinatesistem.tex}
 
 
-Sila $\textbf{f}_{grav} $ je odvisna od mase (m) prijemala ter orientacije vrha robota. Koordinatni sistem, ki ga postavimo v težišèe je zaradi poenostavitve enako orientiran kot tisti, ki je v bazi robota. Orientacijo senzorja je mogoèe zapisati s poznavanjem kinematiènega modela in bo v nadaljevanju oznaèena z \textbf{R}. Tako je mogoèe doloèiti  prispevek 
+Sila $\textbf{f}_{grav} $ je odvisna od mase (m) prijemala ter orientacije vrha robota. Koordinatni sistem prijemala naj bo zaradi poenostavitve vzporeden koordinatnemu sistemu vrha robota. Orientacijo senzorja zapišemo s poznavanjem kinematiènega modela in bo v nadaljevanju oznaèena z \textbf{R}. Tako je mogoèe doloèiti  prispevek 
 
 \begin{equation}
 	\textbf{f}_{grav} = \textbf{R}
@@ -699,62 +699,83 @@ Sila $\textbf{f}_{grav} $ je odvisna od mase (m) prijemala ter orientacije vrha 
 	mg
 	\end{bmatrix} = \textbf{R} \textbf{f}_{gz}.
 \end{equation}
+Ker ima $ \textbf{f}_{gz} $ le en èlen razlièen od niè, lahko iz matrike \textbf{R} vzamemo le tretji stolpec in zapišemo
 
 
-Avtorji v \cite{omrcen_jr3} pokažejo, da je mogoèe izraèunati $\textbf{f}_{grav}$ in $\textbf{f}_{off}$ na podlagi minimalno dveh meritev ($\textbf{f}_{meas}^{(1)}$ in $\textbf{f}_{meas}^{(2)}$). Zapišemo sistem enaèb v matrièni obliki
+\begin{equation} \label{eq:short_r}
+\textbf{f}_{grav} = 
+\begin{bmatrix}
+r31 \\
+r32 \\
+r33
+\end{bmatrix}mg = \textbf{R}_3 mg.
+\end{equation}
+
+Avtorji v \cite{omrcen_jr3} pokažejo, da je mogoèe izraèunati $\textbf{f}_{grav}$ in $\textbf{f}_{off}$ na podlagi najmanj dveh meritev ($\textbf{f}_{meas}^{(1)}$ in $\textbf{f}_{meas}^{(2)}$). Zapišemo sistem enaèb v matrièni obliki
+
+\begin{equation}\label{eq:fmeas12}
+\begin{bmatrix}	\textbf{f}_{mes}^{(1)} \\ \textbf{f}_{mes}^{(2)} \end{bmatrix} = \begin{bmatrix} \mathbf{R}^{(1)} & \textbf{I} \\ \mathbf{R}^{(2)} & \textbf{I}\end{bmatrix} \begin{bmatrix} \textbf{f}_{gz} \\\textbf{f}_{off} \end{bmatrix}.
+\end{equation}
+Upoštevaje \ref{eq:short_r} se nam \ref{eq:fmeas12} poenostavi na 
+\begin{equation}\label{eq:fmeas12_short}
+\begin{bmatrix}\mathbf{f}_{mes}^{(1)} \\ \mathbf{f}_{mes}^{(2)} \end{bmatrix} = \begin{bmatrix} \mathbf{R}_3^{(1)} & \mathbf{I} \\ \mathbf{R}_3^{(2)} & \mathbf{I}\end{bmatrix} \begin{bmatrix} \mathbf{f}_{gz} \\ \mathbf{f}_{off} \end{bmatrix} = \mathbf{A}  \begin{bmatrix} mg \\\textbf{f}_{off} \end{bmatrix}.
+\end{equation}
+Izrazimo $\textbf{f}_{grav}$ in $\textbf{f}_{off}$
 
 \begin{equation}
-\begin{bmatrix}	\textbf{f}_{mes}^{(1)} \\ \textbf{f}_{mes}^{(2)} \end{bmatrix} = \begin{bmatrix} \mathbf{R}^{(1)} & \textbf{I} \\ \mathbf{R}^{(2)} & \textbf{I}\end{bmatrix} \begin{bmatrix} \textbf{f}_{gz} \\\textbf{f}_{off} \end{bmatrix}
+ 	\begin{bmatrix}	mg \\\textbf{f}_{off} \end{bmatrix} = \begin{pmatrix} \textbf{A}^T \textbf{A}\end{pmatrix}^{-1} \textbf{A}^T \begin{bmatrix}	\textbf{f}_{meas}^{(1)} \\ \textbf{f}_{meas}^{(2)} \end{bmatrix}.
 \end{equation}
-in izrazimo $\textbf{f}_{grav}$ in $\textbf{f}_{off}$
-
-\begin{equation}
- 	\begin{bmatrix}	\textbf{f}_{gz} \\\textbf{f}_{off} \end{bmatrix} = \begin{pmatrix} \begin{bmatrix} \mathbf{R}^{(1)} & \textbf{I} \\ \mathbf{R}^{(2)} & \textbf{I}\end{bmatrix}^T \begin{bmatrix} \mathbf{R}^{(1)} & \textbf{I} \\ \mathbf{R}^{(2)} & \textbf{I}\end{bmatrix}\end{pmatrix}^{-1} \begin{bmatrix} \mathbf{R}^{(1)} & \textbf{I} \\ \mathbf{R}^{(2)} & \textbf{I}\end{bmatrix}^T \begin{bmatrix}	\textbf{f}_{meas}^{(1)} \\ \textbf{f}_{meas}^{(2)} \end{bmatrix}.
-\end{equation}
+Enaèba bo veljala le, èe bo matrika \textbf{A} polnega ranga oziroma èe bosta meritvi linearno neodvisni.
 
 
 Za navor pa je potrebno poznati tudi translacijski vektor od težišèa do koordinatnega sistema senzorja, v nadaljevanju oznaèen z \textbf{r}. Prispevek navora zaradi vpliva gravitacije je tako 
 \begin{equation}
 \boldsymbol{\tau}_{grav} = \textbf{r} \times \textbf{f}_{grav}.
 \end{equation}
-Dodatno bomo tukaj definirali še $\widehat{\mathbf{f}}_{grav}$, ki je matrièen zapis vektorja $\textbf{f}_{grav}$. Iz treh razliènih meritev navorov ($\boldsymbol{\tau}_{meas}^{(1)}$, $\boldsymbol{\tau}_{meas}^{(2)}$ in  $\boldsymbol{\tau}_{meas}^{(3)}$) in s tremi razliènimi orientacijami ($\textbf{R}^{(1)}$, $\textbf{R}_{meas}^{(2)}$ in  $\textbf{R}_{meas}^{(3)}$) se zapiše sistem enaèb
+Dodatno bomo tukaj definirali še matrièen zapis vektorja $\textbf{f}_{grav}$ kot
+\begin{equation}
+S(\mathbf{f}_{grav}) =
+\begin{bmatrix}
+0 & -{\mathbf{f}_{grav}}_z & {\mathbf{f}_{grav}}_y \\
+{\mathbf{f}_{grav}}_z & 0 & -{\mathbf{f}{grav}}_x\\
+-{\mathbf{f}_{grav}}_y & {\mathbf{f}_{grav}}_x & 0
+\end{bmatrix}.
+\end{equation} 
+Iz treh razliènih meritev navorov ($\boldsymbol{\tau}_{meas}^{(1)}$, $\boldsymbol{\tau}_{meas}^{(2)}$ in  $\boldsymbol{\tau}_{meas}^{(3)}$) pri treh razliènih orientacijah ($\textbf{R}^{(1)}$, $\textbf{R}_{meas}^{(2)}$ in  $\textbf{R}_{meas}^{(3)}$) zapišemo sistem enaèb
 
 \begin{equation}
-\begin{bmatrix}	\boldsymbol{\tau}_{meas}^{(1)} \\ \boldsymbol{\tau}_{meas}^{(2)} \\ \boldsymbol{\tau}_{meas}^{(3)} \end{bmatrix} = \begin{bmatrix} \widehat{\mathbf{f}}_{grav}^{(1)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(2)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(3)} & \textbf{I} \end{bmatrix} \begin{bmatrix}	\textbf{r} \\\boldsymbol{\tau}_{off}\end{bmatrix}.
+\begin{bmatrix}	\boldsymbol{\tau}_{meas}^{(1)} \\ \boldsymbol{\tau}_{meas}^{(2)} \\ \boldsymbol{\tau}_{meas}^{(3)} \end{bmatrix} = \begin{bmatrix} \mathbf{S}(\mathbf{f}_{grav})^{(1)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(2)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(3)} & \textbf{I} \end{bmatrix} \begin{bmatrix}	\textbf{r} \\\boldsymbol{\tau}_{off}\end{bmatrix}.
 \end{equation}
-Enaèbo obrnemo in izpostavimo \textbf{r} in $\boldsymbol{\tau}_{grav}$
+Enaèbo obrnemo in izrazimo \textbf{r} in $\boldsymbol{\tau}_{grav}$
 
 \begin{equation}
-\begin{bmatrix}	\textbf{r} \\\boldsymbol{\tau}_{off}\end{bmatrix} = \begin{pmatrix} \begin{bmatrix} \widehat{\mathbf{f}}_{grav}^{(1)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(2)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(3)} & \textbf{I} \end{bmatrix}^T \begin{bmatrix} \widehat{\mathbf{f}}_{grav}^{(1)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(2)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(3)} & \textbf{I} \end{bmatrix} \end{pmatrix}^{-1} \begin{bmatrix} \widehat{\mathbf{f}}_{grav}^{(1)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(2)} & \textbf{I} \\ \widehat{\mathbf{f}}_{grav}^{(3)} & \textbf{I} \end{bmatrix}^T \begin{bmatrix}	\boldsymbol{\tau}_{meas}^{(1)} \\ \boldsymbol{\tau}_{meas}^{(2)} \\ \boldsymbol{\tau}_{meas}^{(3)} \end{bmatrix}.
+\begin{bmatrix}	\textbf{r} \\\boldsymbol{\tau}_{off}\end{bmatrix} = \begin{pmatrix} \begin{bmatrix} \mathbf{S}(\mathbf{f}_{grav})^{(1)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(2)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(3)} & \textbf{I} \end{bmatrix}^T \begin{bmatrix} \mathbf{S}(\mathbf{f}_{grav})^{(1)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(2)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(3)} & \textbf{I} \end{bmatrix} \end{pmatrix}^{-1} \begin{bmatrix} \mathbf{S}(\mathbf{f}_{grav})^{(1)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(2)} & \textbf{I} \\ \mathbf{S}(\mathbf{f}_{grav})^{(3)} & \textbf{I} \end{bmatrix}^T \begin{bmatrix}	\boldsymbol{\tau}_{meas}^{(1)} \\ \boldsymbol{\tau}_{meas}^{(2)} \\ \boldsymbol{\tau}_{meas}^{(3)} \end{bmatrix}.
 \end{equation}
 
-Bistveni trije podatki, ki smo jih s temi izraèuni izpostavili so merilni odmik, masa prijemala ter njegovo težišèe. Prednost tega postopka je, da imamo orientacijo senzorja v vseh merilnih pozicijah natanèno doloèeno zaradi poznavanja kinematiènega modela robota. Hkrati pa lahko ta postopek popolnoma avtomatiziramo, kar smo avtorji tega dela tudi naredili. Postopek je opisan v dodatku \ref{appendix:jr3-calibration}. Masa ter težišèe prijemala sta parametra, ki se jih identificira in sta èasovno neodvisna. Zaradi efekta lezenja uporovnih listièev pa je merilni odmik èasovno odvisen in ga je potrebno pogosteje izmeriti.
+Bistveni trije podatki, ki smo jih s temi izraèuni izpostavili so merilni odmik, vpliv gravitacije ter težišèe prijemala. Prednost tega postopka je, da imamo orientacijo senzorja v vseh merilnih pozicijah natanèno doloèeno zaradi poznavanja kinematiènega modela robota. Hkrati pa lahko ta postopek popolnoma avtomatiziramo, kar smo tudi naredili. Postopek je opisan v dodatku \ref{appendix:jr3-calibration}. Masa ter težišèe prijemala sta parametra, ki se jih identificira in sta èasovno neodvisna. Zaradi efekta lezenja uporovnih listièev pa je merilni odmik èasovno odvisen in ga je potrebno pogosteje izmeriti.
 
 V nadaljevanju bo sila ter navor kot posledica interakcije z okolico zapisana v vektorju $\textbf{h}_e$ kot
 \begin{equation}
-\textbf{h}_e = \begin{bmatrix} \textbf{f}_{env} \\ \boldsymbol{\tau}_{env} \end{bmatrix}.
+\textbf{h}_e =  \begin{bmatrix} \textbf{f}_{s} - \widehat{\textbf{f}}_{grav} - \widehat{\textbf{f}}_{off}\\ \boldsymbol{\tau}_s - \widehat{\boldsymbol{\tau}}_{grav} - \widehat{\boldsymbol{\tau}}_{off}\end{bmatrix} = \begin{bmatrix} \textbf{f}_{env} \\ \boldsymbol{\tau}_{env} \end{bmatrix},
 \end{equation}
-
-
+kjer so $ (.)_s $ odèiteki senzorja in $ \widehat{(.)} $ izraèunani prispevki.
 
 \section{Vodenje preko inverzne kinematike} \label{sec:admittheor}
 
-Vodenje robota preko vhodnih hitrostih v sklepih uporablja PI regulator v krmilniku, ki poskrbi, da se vsak sklep vrti s hitrostjo èimbolj podobno referenèni. Iz tega vidika je prednost ta, da ne glede na konfiguracijo ter obremenitev robota, bo regulator vedno poskrbel èim boljše sledenje referenci. Vplivi gravitacije se kompenzirajo z integrirnim èlenov v regulatorju. V nadaljevanju bo opisano vodenje motorjev robota v želeno lego oziroma vodenje robota v notranjih koordinatah. Nato pa se bo iz tega še izpeljalo vodenje v zunanjih koordinatah.
+Za vodenje robota preko hitrosti v sklepih se uporablja PI regulator v krmilniku, ki poskrbi, da se vsak sklep vrti s hitrostjo èimbolj podobno referenèni. Iz tega vidika je prednost ta, da ne glede na konfiguracijo ter obremenitev robota, bo regulator vedno poskrbel èim boljše sledenje referenci. Vplivi gravitacije se kompenzirajo z integrirnim èlenov v regulatorju. V nadaljevanju bo opisano vodenje motorjev robota v želeno lego oziroma vodenje robota v notranjih koordinatah. Nato pa se bo iz tega še izpeljalo vodenje v zunanjih koordinatah.
 
 
 \subsection{Vodenje v notranjih koordinatah} \label{sec:admit_inner}
 
-Krmilnik servo motorjev nam v vsakem danem trenutku vraèa trenuten kot v sklepu. Ker ima PI regulator visoka ojaèanja ter visoko frekvenco, bomo za namene poenostavitve aproksimirali motor kot integrator $\frac{1}{s}$. Naj bo referenèni kot v sklepih oznaèen kot $\textbf{q}_{ref}$ in naj bo dejanski kot oznaèen kot $\textbf{q}$. Razlika med njima je napaka v kotu 
+Krmilnik servo motorjev v vsakem danem trenutku vraèa trenuten kot v sklepu. Lastna frekvenca zaprtozanènega sistema je dovolj visoka, da lahko servo sistem za eno stopnjo robota aproksimiramo kot integrator $\frac{1}{s}$. Naj bo referenèni kot v sklepih oznaèen kot $\textbf{q}_{ref}$ in naj bo dejanski kot oznaèen kot $\textbf{q}$. Razlika med njima je napaka v kotu 
 
 \begin{equation}
 	\tilde{\textbf{q}} = \textbf{q}_{ref} - \textbf{q}.
 \end{equation}
 
-S preprostim P regulatorjem lahko kote v sklepu robota vodimo s povratno zanko tako, kot je prikazano na shemi \ref{fig:qfeedback}. Ojaèanje regulatorja bo oznaèeno s $\textbf{K}_p$ in je diagonalna saj ima vsak sklep svoje ojaèanje neodvisno od ostalih. S poveèevanjem ojaèanja regulatorja \textbf{K} vplivamo na dinamiko odziva \cite{zupancic_tr}.
-
-\begin{equation} \label{eq:p_reg_q}
+S preprostim P regulatorjem lahko kote v sklepu robota vodimo s povratno zanko tako, kot je prikazano na shemi \ref{fig:qfeedback}\begin{equation} \label{eq:p_reg_q}
 \textbf{u} = \textbf{K}_p  \tilde{\textbf{q}}.
-\end{equation}
+\end{equation}Ojaèanje regulatorja je oznaèeno s $\textbf{K}_p$ in je diagonalna matrika saj ima vsak sklep svoje ojaèanje neodvisno od ostalih. S poveèevanjem ojaèanja regulatorja \textbf{K} vplivamo na dinamiko odziva \cite{zupancic_tr}.
 
 %Primer odziva takega regulatorja pri K = 1 je na sliki \ref{fig:p-reg}.
 
@@ -783,7 +804,7 @@ Pogoj stabilnosti je, da vsi poli sistema ležijo na desni strani \textit{s} ravn
 
 \subsection{Vodenje v zunanjih koordinatah} \label{sec:inv_kin_x}
 
-Kinematièni model robota in problem inverzne kinematike je bil opisan v \ref{sec:pa10_kin_model}. Predstavljen je bil problem inverzne kinematike za redundantni sistem ter pseudoinverz Jacobijeve matrike. V nadaljevanju bo opisano vodenje robotov v zunanjih koordinatah v splošnem primeru, ko velja $n = m$.
+Kinematièni model robota in problem inverzne kinematike je bil opisan v \ref{sec:pa10_kin_model}. Predstavljen je bil problem inverzne kinematike za redundantni sistem ter pseudoinverz Jacobijeve matrike. Zato bo v nadaljevanju uporabljen generaliziran pseudoinverz Jacobijeve matrike.
 
 Naj bo $\textbf{x}_{ref}$ vektor referenène lege vrha robota in naj bo $\textbf{x}$ trenutna lega vrha robota. Napaka je tako
 
@@ -805,8 +826,7 @@ To enaèbo je mogoèe razumeti tudi kot zvezo med spremembo položaja vrha ter skle
 	\tilde{\textbf{q}} = \textbf{J}^{*}(\textbf{q})  \tilde{\textbf{x}}
 \end{equation}
 
-Z vstavitvijo enaèbe \ref{eq:qtox} v \ref{eq:p_reg_q} dobimo P regulator lege vrha robota Sedaj je mogoèe regulirni signal, ki krmili hitrost v sklepih robota tako, da bo vrh sledil referenèni legi
-
+Z vstavitvijo enaèbe \ref{eq:qerr} v \ref{eq:p_reg_q} dobimo P regulator lege vrha robota.
 \begin{equation} \label{eq:outcontrol}
 \textbf{u} = \textbf{K}_p  \textbf{J}^{*}(\textbf{q})  (\textbf{x}_{ref} - \textbf{x}).
 \end{equation}
@@ -819,40 +839,6 @@ Avtor v \cite{mihelj_vodenje} navaja, da se mehanski sistem, ki je voden na ta n
 	\label{fig:xfeedback}
 \end{figure}
 
-\section{Admitanèno vodenje} \label{sec:vodenje-admitance}
-
-Robotski mehanizem PA-10 je industrijski robot s segmenti iz pretežno litega železa. Segmenti imajo relativno veliko maso, sklepi pa relativno visoko trenje. Lahko predpostavimo, da ima manipulator veliko lastno impedanco. Pojem mehanske impedance izvira iz analogije elektriène impedance. Predstavlja pa razmerje med silo (\textit{F}) in hitrostjo (\textit{v}) 
-
-\begin{equation}
-Z(s) = \frac{F}{v} = ms + b + \frac{k}{s}
-\end{equation}
-oziroma razmerje med silo in pozicijo (\textit{x})
-
-\begin{equation}
-Z(s) = \frac{F}{x} = ms^2 + bs + k,
-\end{equation}
-kjer je \textit{m} masa, \textit{b} viskozno dušenje, \textit{k} togost \cite{mihelj_hapt}.
-
-
-
-Za admitanèno vodenje je potrebno še upoštevati podatek o silah in navorih, ki delujejo na vrhu robota. Kot omenjeno v poglavju \ref{sec:arcnet} je bil na vrh robota pritrjen senzor sil in navorov JR3. Izmerjene sile in navori bodo oznaèene s $\textbf{h}_{e}$, referenène sile in navori pa z $\textbf{h}_{ref}$. Napaka sile je tako definirana kot:
-\begin{equation} \label{eq:herr}
-\tilde{\textbf{h}} = \textbf{h}_{ref} - \textbf{h}_e.
-\end{equation}
-
-Sila kot rezultat delovanja robota na okolico je odvisna od hitrosti oz. pozicije vrha robota. Premikal se bo v smeri želene sile. Zato lahko napako sile dodamo v regulator lege \ref{eq:outcontrol}. Definiramo referenèno pozicijo v odvisnosti od hitrosti
-
-\begin{equation} \label{eq:xrefforce}
-\textbf{x}_{ref} = \textbf{K}_{hP}\tilde{\textbf{h}} + \textbf{K}_{hI} \int_{0}^{t}\tilde{\textbf{h}}.
-\end{equation}
-
-Dobili smo PI regulator sile interakcije. Èeprav je bilo pri definiciji mehanske impedance definirano, da je to razmerje med silo ter hitrostjo, se raje uporablja razmerje med silo ter pozicijo. Meritve sile so podvržene šumu, integrator pa deluje kot nizkopasovni filter. Z vpeljavo integratorja, dosežemo to, da se bo robot premikal v smeri želene sile s hitrostjo $\textbf{K}_{hI} \int_{0}^{t}\tilde{\textbf{h}}$.
-
-Z vstavitvijo enaèbe \ref{eq:xrefforce} v \ref{eq:outcontrol} je mogoèe zapisati celotno regulacijsko enaèbo za vodenje robota v zunanjih koordinatah z upoštevanjem delovanja zunanjih sil na vrh robota.
-
-\begin{equation} \label{eq:admitcontrol}
-\textbf{u} = \textbf{K}_p  \textbf{J}^{-1}(\textbf{K}_{hP}\tilde{\textbf{h}} + \textbf{K}_{hI} \int_{0}^{t}\tilde{\textbf{h}}d\xi - \textbf{x})
-\end{equation}
 
 %BEGIN_FOLD
 %\section{Implementacija}\label{sec:admitimplement}
@@ -877,12 +863,12 @@ Z vstavitvijo enaèbe \ref{eq:xrefforce} v \ref{eq:outcontrol} je mogoèe zapisati
 %*********************** INVERZNA DINAMIKA ********************************
 \section{Krmiljenje z inverzno dinamiko} \label{chap:invdyn}
 
-Navor proizveden v motorjih robota je linearno odvisen od toka, ki gre v motor. Krmilnik servo motorjev robota PA-10 uporablja P regulator toka za krmiljenje motorjev v navornem naèinu. Problem vodenja robota v zunanjih koordinatah se tako prevede v problem doloèevanja primernega navora za opravljanje naloge. Navore lahko izraèunamo s pomoèjo inverznega dinamiènega modela, kar zahteva dobro poznavanje dinamiènih parametrov. Dinamièen model je bil opisan v \ref{sec:pa10-dynmodel}. V nadaljevanju bomo opisali vodenje po zunanjih in po notranjih koordinatah. Enaèbo \ref{eq:din} zapisali drugaèe in sicer brez upoštevanja zunanjih sil na vrh manipulatorja, $\textbf{h}_o = 0$. Dodatno bomo vpeljali še novo velièino
+Navor proizveden v motorjih robota je linearno odvisen od toka, ki gre v motor. Krmilnik servo motorjev robota PA-10 uporablja P regulator toka za krmiljenje motorjev v navornem naèinu. Problem vodenja robota v zunanjih koordinatah se tako prevede v problem doloèevanja primernega navora za opravljanje naloge. Navore lahko izraèunamo s pomoèjo inverznega dinamiènega modela, kar zahteva dobro poznavanje dinamiènih parametrov. Dinamièen model je bil opisan v \ref{sec:pa10-dynmodel}. V nadaljevanju bomo opisali vodenje po zunanjih in po notranjih koordinatah. Enaèbo \ref{eq:din} zapišemo drugaèe in sicer brez upoštevanja zunanjih sil na vrh manipulatorja, $\textbf{h}_o = 0$. Dodatno bomo vpeljali še novo velièino
 
 \begin{equation}
 	\textbf{n}(q,\dot{q}) = \textbf{C}(\textbf{q},\dot{\textbf{q}})  \dot{\textbf{q}} + \textbf{F}_f(\dot{\textbf{q}}, \textbf{q}) + \textbf{g}(\textbf{q}),
 \end{equation}
-ki združuje vse dinamiène parametre razen vztrajnosti. Sedaj zapišemo dinamièen model robota v skrajšani obliki
+ki združuje vse dinamiène velièine razen vpliva vztrajnosti. Sedaj zapišemo dinamièen model robota v skrajšani obliki
 
 \begin{equation}\label{eq:tau_dyn}
 \pmb{\tau}(\mathbf{\ddot{q}},\mathbf{\dot{q}},\textbf{q}) = \textbf{B}(\textbf{q})  \ddot{\textbf{q}} + \textbf{n}(\textbf{q},\mathbf{\dot{q}})
@@ -892,45 +878,41 @@ ki združuje vse dinamiène parametre razen vztrajnosti. Sedaj zapišemo dinamièen 
 
 Preden se lotimo vodenja v zunanjih koordinatah je najprej potrebno definirati vodenje robota po notranjih koordinatah. Vhodna velièina je navor zato bomo zapisali 
 
-\begin{equation}
+\begin{equation}\label{eq:taueqq}
 	\pmb{\tau}(q,\dot{q},\ddot{q}) = \textbf{u}.
 \end{equation}
-Sedaj definiramo še približke dinamiènih parametrov robota $\mathbf{\hat{B}}$ in $\mathbf{\hat{n}}$ . Navor za sledenje referenènemu pospešku $\mathbf{\ddot{q}}_{ref}$ sedaj izraèunamo z 
+Predpostavimo, da poznamo približen dinamièni model robota, t.j. matriko $\mathbf{\hat{B}}$ in $\mathbf{\hat{n}}$. Navor za sledenje referenènemu pospešku $\mathbf{\ddot{q}}_{ref}$ sedaj izraèunamo z 
 
 \begin{equation}\label{eq:u_from_ddq}
 \textbf{u} = \mathbf{\hat{B}}(\textbf{q})\mathbf{\ddot{q}}_{ref} + \mathbf{\hat{n}}(q,\dot{q}).
 \end{equation}
-Vstavimo \ref{eq:u_from_ddq} v \ref{eq:tau_dyn} 
+Vstavimo \ref{eq:u_from_ddq} in \ref{eq:tau_dyn}  v \ref{eq:taueqq} in dobimo
 \begin{equation}
-\mathbf{\hat{B}}(\textbf{q})\mathbf{\ddot{q}}_{ref} + \mathbf{\hat{n}}(q,\dot{q}) = \textbf{B}(\textbf{q})  \ddot{\textbf{q}} + \textbf{n}(\textbf{q},\mathbf{\dot{q}})
+\mathbf{\hat{B}}(\textbf{q})\mathbf{\ddot{q}}_{ref} + \mathbf{\hat{n}}(q,\dot{q}) = \textbf{B}(\textbf{q})  \ddot{\textbf{q}} + \textbf{n}(\textbf{q},\mathbf{\dot{q}}).
 \end{equation}
-in s predpostavko, da velja $\mathbf{\hat{B}} = \mathbf{B}$ in $\mathbf{\hat{n}} = \mathbf{n}$ lahko zapišemo
+Èe predpostavimo, da poznamo natanèen model, velja $\mathbf{\hat{B}} = \mathbf{B}$ in $\mathbf{\hat{n}} = \mathbf{n}$ in lahko zapišemo
 \begin{equation}\label{eq:ddqref_ddq}
 \mathbf{\ddot{q}}_{ref} = \ddot{\textbf{q}}.
 \end{equation}
-Enaèba nam pravi, da v kolikor dobro poznamo dinamièen model, se bodo sklepi vrteli z referenèno hitrostjo \cite{mihelj_vodenje}. Ker pa dinamiènih parametrov robota v praksi nikoli dovolj natanèno ne poznamo se med referenènim in dejanskim pospeškom pojavi napaka kar privede do napake v konèni poziciji sklepov. Zato je smiselno referenènemu pospešku dodati še regulacijo hitrosti ter pozicije
-
+Enaèba nam pravi, da v kolikor poznamo natanèen dinamièen model, bo vodenje \ref{eq:u_from_ddq} zagotovilo želeno gibanje robota \cite{mihelj_vodenje}. Ker pa dinamiènih parametrov robota v praksni nikoli ne poznamo dovolj natanèno, \ref{eq:ddqref_ddq} ne velja in se pojavi napaka v poziciji sklepov. Zato je smiselno krmilnemu signalu dodati še regulacijo hitrosti ter pozicije in definiramo krmilne pospeške $ \ddot{\mathbf{q}}_u $ kot
 \begin{equation}
-	\pmb{\alpha} = \mathbf{\ddot{q}}_{ref} + \textbf{K}_p (q_{ref} - q) + \textbf{K}_d(\mathbf{\dot{q}} - \mathbf{\dot{q}}).
+	\ddot{\mathbf{q}}_u = \mathbf{\ddot{q}}_{ref} + \textbf{K}_p (q_{ref} - q) + \textbf{K}_d(\mathbf{\dot{q}} - \mathbf{\dot{q}}).
 \end{equation}
-$\pmb{\alpha}$, ki predstavlja izraèunane pospeške, sedaj vstavimo v enaèbo \ref{eq:u_from_ddq} namesto $\pmb{\ddot{q}}_{ref}$ in dobimo konèno enaèbo za vodenje preko inverzne kinematike
+in jih vstavimo v enaèbo \ref{eq:u_from_ddq} namesto $\pmb{\ddot{q}}_{ref}$. Konèna enaèba za vodenje preko inverzne dinamike je tako
 \begin{equation}
 	\textbf{u} = \mathbf{\hat{B}}(\textbf{q})(\mathbf{\ddot{q}}_{ref} + \textbf{K}_p (q_{ref} - q) + \textbf{K}_d(\mathbf{\dot{q}} - \textbf{q})) + \mathbf{\hat{n}}(q,\dot{q}).
 \end{equation}
 
-Èe sedaj primerjamo $\pmb{\alpha}$ z dejanskim pospeškom v sklepih lahko zapišemo dinamiko signala napake, ki doloèa kako signal napake s èasom limitira poroti niè
-
-
-
+Èe sedaj primerjamo $ \ddot{\mathbf{q}}_u $ z dejanskim pospeškom v sklepih lahko zapišemo dinamiko signala napake, kot
 
 \begin{equation}
 	\mathbf{\ddot{\tilde{q}}} + \mathbf{K}_d \mathbf{\dot{\tilde{q}}}  + \mathbf{K}_p \mathbf{\tilde{q}} = 0.
 \end{equation}
 Enaèbo lahko prevedemo v Laplace-ov prostor 
 \begin{equation}
-	s^2 + \textbf{K}_ds+\textbf{K}_p
+	s^2 + \textbf{K}_ds+\textbf{K}_p = 0
 \end{equation}
-in opazimo, da je to prenosna funkcija drugega reda. Sistem bo asimptotièno stabilen, èe sta $\textbf{K}_p$ in $\textbf{K}_d$ pozitivno definitni. Nesklopljenost sistema dobimo tako, da sta matriki diagonalni in diagonalne èlene zapišemo v obliki $\textbf{K}_{p_{ii}} = \omega^2{n_{ii}}$ in $\textbf{K}_{d_{ii}} = 2\xi_i \omega_{n_{ii}}$ \cite{mihelj_vodenje}, kjer je $\omega$ lastna frekvenca in $\xi$ dušenje sistema drugega reda.
+in opazimo, da je to prenosna funkcija drugega reda. Sistem bo asimptotièno stabilen, èe sta $\textbf{K}_p$ in $\textbf{K}_d$ pozitivno definitni. Nesklopljenost sistema dobimo tako, da sta matriki diagonalni. Diagonalne èlene zapišemo v obliki $\textbf{K}_{p_{ii}} = \omega^2{n_{ii}}$ in $\textbf{K}_{d_{ii}} = 2\xi_i \omega_{n_{ii}}$ \cite{mihelj_vodenje}, kjer je $\omega$ lastna frekvenca in $\xi$ dušenje sistema drugega reda.
 
 
 Shema takega vodenja je prikazana na sliki \ref{fig:ddq_tau_dyn}.
@@ -944,26 +926,26 @@ Shema takega vodenja je prikazana na sliki \ref{fig:ddq_tau_dyn}.
 
 \subsection{Vodenje v zunanjih koordinatah}
 
-V \ref{sec:inv_kin_x} smo robota vodili po hitrostih v sklepih in je bilo zato potrebno definirati tudi hitrost vrha robota. Pri vodenju preko inverzne dinamike pa smo pokazali, da je potrebno definirati ustrezne pospeške. Tako je sedaj potrebno izpeljali takšen $\pmb{\alpha}$, da bo robot sledil referenènim pospeškom v zunanjih koordinatah. Spomnimo sedaj na relacijo med hitrosti v sklepih in hitrostih na vrhu robota
+V \ref{sec:inv_kin_x} smo robota vodili po hitrostih v sklepih in je bilo zato potrebno definirati tudi hitrost vrha robota. Pri vodenju preko inverzne dinamike pa smo pokazali, da je potrebno definirati ustrezne pospeške. Tako je sedaj potrebno izpeljali takšen $\ddot{\mathbf{q}}_u$, da bo robot sledil referenènim pospeškom v zunanjih koordinatah. Z upoštevanjem relacije med hitrostmi v sklepih in hitrostmi na vrhu robota
 \begin{equation}
 \dot{\textbf{x}} = \textbf{J}(\textbf{q})  \dot{\textbf{q}}.
 \end{equation}
-in njen odvod
+in njenega odvoda
 \begin{equation}
 \ddot{\mathbf{x}} = \textbf{J}(\textbf{q})\ddot{\mathbf{q}} +  \dot{\mathbf{J}}(\mathbf{q})\dot{\mathbf{q}}.
 \end{equation}
-V enaèbi zamenjamo $\ddot{\mathbf{x}}$ z \textbf{a} in $\ddot{\mathbf{q}}$ z $\pmb{\alpha}$. Izpostavimo $\pmb{\alpha}$
+dobimo
 \begin{equation}\label{eq:accel_dyn}
-	\pmb{\alpha} = \textbf{J}^* (\textbf{q})(\textbf{a} - \dot{\mathbf{J}}(\textbf{q},\dot{\mathbf{q}})\dot{\mathbf{q}})
+	\ddot{\mathbf{q}}_u = \textbf{J}^* (\textbf{q})(\ddot{\mathbf{x}} - \dot{\mathbf{J}}(\textbf{q},\dot{\mathbf{q}})\dot{\mathbf{q}})
 \end{equation}
 
 Sedaj lahko definiramo regulator, ki bo dajal take pospeške v sklepih, da bo vrh robota sledil referenèni legi. Avtor v \cite{siciliano_robot} predlaga sledeè regulator pospeškov
 \begin{equation}\label{eq:accel_dyn_ref}
-	\textbf{a} = \ddot{\mathbf{x}}_{ref} + \textbf{K}_d \dot{\tilde{\mathbf{x}}} + \textbf{K}_p \tilde{\mathbf{x}}
+	\ddot{\mathbf{x}}_u = \ddot{\mathbf{x}}_{ref} + \textbf{K}_d \dot{\tilde{\mathbf{x}}} + \textbf{K}_p \tilde{\mathbf{x}}
 \end{equation}
 Z vstavitvijo \ref{eq:accel_dyn_ref} v \ref{eq:accel_dyn} dobimo konèno enaèbo pospeškov v sklepih
 \begin{equation}\label{eq:alpha_inv_dyn}
-	\pmb{\alpha} = \textbf{J}^* (\textbf{q})(\ddot{\mathbf{x}}_{ref} + \textbf{K}_d \dot{\tilde{\mathbf{x}}} + \textbf{K}_p \tilde{\mathbf{x}} - \dot{\mathbf{J}}(\textbf{q},\dot{\mathbf{q}})\dot{\mathbf{q}})
+	\ddot{\mathbf{q}}_u = \textbf{J}^* (\textbf{q})(\ddot{\mathbf{x}}_{ref} + \textbf{K}_d \dot{\tilde{\mathbf{x}}} + \textbf{K}_p \tilde{\mathbf{x}} - \dot{\mathbf{J}}(\textbf{q},\dot{\mathbf{q}})\dot{\mathbf{q}})
 \end{equation}
 
 Shema takega vodenja je prikazana na sliki \ref{fig:ddx_tau_dyn}.
@@ -976,24 +958,61 @@ Shema takega vodenja je prikazana na sliki \ref{fig:ddx_tau_dyn}.
 
 \section{Interakcija z okoljem}
 
+\section{Admitanèno vodenje} \label{sec:vodenje-admitance}
+
+Robotski mehanizem PA-10 je industrijski robot s segmenti iz pretežno litega železa. Segmenti imajo relativno veliko maso, sklepi pa relativno visoko trenje. Lahko predpostavimo, da ima manipulator veliko lastno impedanco. Pojem mehanske impedance izvira iz analogije elektriène impedance. Predstavlja pa razmerje med silo (\textit{F}) in hitrostjo (\textit{v}) 
+
+\begin{equation}
+Z(s) = \frac{F}{v} = ms + b + \frac{k}{s}
+\end{equation}
+oziroma razmerje med silo in pozicijo (\textit{x})
+
+\begin{equation}
+Z(s) = \frac{F}{x} = ms^2 + bs + k,
+\end{equation}
+kjer je \textit{m} masa, \textit{b} viskozno dušenje, \textit{k} togost \cite{mihelj_hapt}.
+
+
+
+Za admitanèno vodenje je potrebno še upoštevati podatek o silah in navorih, ki delujejo na vrhu robota. Izmerjene sile in navori bodo oznaèene s $\textbf{h}_{e}$, referenène sile in navori pa z $\textbf{h}_{ref}$. Napaka sile je tako definirana kot:
+\begin{equation} \label{eq:herr}
+\tilde{\textbf{h}} = \textbf{h}_{ref} - \textbf{h}_e.
+\end{equation}
+
+Sila kot rezultat delovanja robota na okolico je odvisna od hitrosti oz. pozicije vrha robota. Zato lahko napako sile dodamo v regulator lege \ref{eq:outcontrol}. Definiramo referenèno pozicijo v odvisnosti od sile
+
+\begin{equation} \label{eq:xrefforce}
+\textbf{x}_{ref} = \textbf{K}_{hP}\tilde{\textbf{h}} + \textbf{K}_{hI} \int_{0}^{t}\tilde{\textbf{h}}d\xi.
+\end{equation}
+
+Z vstavitvijo enaèbe \ref{eq:xrefforce} v \ref{eq:outcontrol} je mogoèe zapisati celotno regulacijsko enaèbo za vodenje robota v zunanjih koordinatah z upoštevanjem delovanja zunanjih sil na vrh robota.
+
+\begin{equation} \label{eq:admitcontrol}
+\textbf{u} = \textbf{K}_p  \textbf{J}^{-1}(\textbf{K}_{hP}\tilde{\textbf{h}} + \textbf{K}_{hI} \int_{0}^{t}\tilde{\textbf{h}}d\xi - \textbf{x})
+\end{equation}
+
+Dobili smo PI regulator sile interakcije. Èeprav je bilo pri definiciji mehanske impedance definirano, da je to razmerje med silo ter hitrostjo, se raje uporablja razmerje med silo ter pozicijo. Meritve sile so podvržene šumu, integrator pa deluje kot nizkopasovni filter. 
+
+\section{Impedanèno vodenje}
+
 Pri izpeljavi vodenja lege robota z inverzno dinamiko smo predpostavili, da so sile interakcije $\textbf{h}_o$ enake niè. Ker pa to v primeru, da je robot v kontaktu z okoljem ni res, je potrebno pogledati kaj se zgodi takrat, ko te sile delujejo na robota. Vzemimo spet dinamièen model robota, ki ga vodimo preko reguliranega pospeška $\pmb{\alpha}$ in dodamo silo interakcije 
 \begin{equation}
 \textbf{u}= \mathbf{\hat{B}}(\textbf{q}) \pmb{\alpha} + \mathbf{\hat{n}}(q,\dot{q}) + \mathbf{J}^T \mathbf{h}_o.
 \end{equation}
 Vidimo, da bodo sedaj navori v sklepi razlièni od izraèunanih preko inverznega dinamiènega modela in posledièno bo med želenim vrhom robota in dejanskim vrhom robota nastala napaka. Vrh robota bo z neko silo deloval na okolje, ki pa jo lahko s senzorjem na vrhu robota oz. med prijemalom in vrhom, izmerimo. Vprašanje je sedaj robota vodimo tako, da bo na okolje deloval z želeno silo.
 
-V literaturi najdemo izraz impedanèno vodenje. Ta naèin vodenja je analogen admitanènemu opisanem v \ref{sec:vodenje-admitance}. V tem primeru gre za posredno vodenje sile preko pozicije. Ker pa je uspešnost vodenja odvisna od togosti okolja je bolje izbrati metodo za direktno vodenje po sili \cite{siciliano_robot}.
+V literaturi \cite{craig_robintro, mihelj_hapt} najdemo izraz impedanèno vodenje. Ta naèin vodenja je analogen admitanènemu opisanem v \ref{sec:vodenje-admitance}. V tem primeru gre za posredno vodenje sile preko pozicije. Ker pa je uspešnost vodenja odvisna od togosti okolja je bolje izbrati metodo za direktno vodenje po sili \cite{siciliano_robot}.
 
-Želja po vodenju sile bi naèeloma predvidevala uporabo PD regulatorja za sil. Ker pa je izmerjen signal sile podvržen merilnemu šumu, predstavlja odvajanje tega signala ojaèanje šuma, kar pa vodi v nestabilnost. Zato se v praksi raje implementira vodenje sile in hkrati vodenje pozicije vrha robota.
+Za vodenje sile bi naèeloma lahko uporabili PD regulator. Ker pa je izmerjen signal sile podvržen merilnemu šumu, predstavlja odvajanje tega signala ojaèanje šuma, kar lahko vodi v nestabilnost. Zato se v praksi raje implementira vodenje sile in hkrati vodenje pozicije vrha robota.
 
 Sila, ki nastane ob kontaktu z okoljem, bo modelirana z modelom vzmeti in sicer
 \begin{equation}
-	\textbf{h}_e = \textbf{K}(\textbf{x} - \textbf{x}_e),
+	\textbf{h}_e = \textbf{K}_e(\textbf{x} - \textbf{x}_e),
 \end{equation}
 kjer je \textbf{x} lega vrha robota, $\textbf{x}_e$ lega normale na površino okolice in $ \textbf{K}_{e} $ togost okolice. Situacijo prikazuje slike \ref{fig:enviroment_interraction}.
 \input{./Slike/enviroment_interraction.tex}
 
-Za vodenje lege vrha robota bomo vzeli enaèbo \ref{eq:alpha_inv_dyn}. Ker gre za vodenje po poziciji bomo $\ddot{\mathbf{x}}_{ref}$ postavili na niè in vpeljali referenèno poziciji vrha $\textbf{x}_{ref}$. Enaèba ima sedaj obliko 
+Za vodenje lege vrha robota bomo uporabili enaèbo \ref{eq:alpha_inv_dyn}. Ker gre za vodenje po poziciji bomo $\ddot{\mathbf{x}}_{ref}$ postavili na niè in vpeljali referenèno poziciji vrha $\textbf{x}_{ref}$. Enaèba ima sedaj obliko 
 \begin{equation}\label{eq:a_xf}
 	\textbf{a} = \textbf{K}_P (\mathbf{x} - \mathbf{x}_{f}) - \textbf{K}_d \dot{\mathbf{x}},
 \end{equation}
